passing getPersons_noArgs_exists_returnAllMovies test
